--- a/HELENA/RPG/rpg.html
+++ b/HELENA/RPG/rpg.html
@@ -179,7 +179,7 @@
 
                     <div class="d-flex justify-content-center">
 
-                        <img id="img" class="mt-2" />
+                        <img id="imagemInimigoId" class="mt-2" />
 
 
                     </div>
